feat: standardize list responses and add pagination support
Unified response structure for all listing endpoints.

Integrated Pageable support for efficient data retrieval.

Updated controllers to return paginated meta-data.