@@ -1,6 +1,8 @@
 package com.brokerage.tradeengine.application.usecase;
 
 import com.brokerage.tradeengine.application.dto.response.AssetListItemResponse;
+import com.brokerage.tradeengine.domain.common.PageableRequest;
+import com.brokerage.tradeengine.domain.common.PagedResult;
 import com.brokerage.tradeengine.domain.model.Asset;
 import com.brokerage.tradeengine.domain.repository.AssetRepository;
 import org.junit.jupiter.api.Test;
@@ -32,14 +34,15 @@ class ListAssetsUseCaseTest {
                 new Asset("cust-1", "TRY", new BigDecimal("1000.00"), new BigDecimal("800.00")),
                 new Asset("cust-1", "AAPL", new BigDecimal("10.00"), new BigDecimal("6.50"))
         );
-        when(assetRepository.findByCustomerId(customerId)).thenReturn(assets);
+        when(assetRepository.findByCustomerId(customerId, PageableRequest.of(1, 10)))
+                .thenReturn(PagedResult.of(assets, 1, 2));
 
-        List<AssetListItemResponse> responses = listAssetsUseCase.execute(customerId);
+        PagedResult<AssetListItemResponse> responses = listAssetsUseCase.execute(customerId, 1, 10);
 
-        assertEquals(2, responses.size());
-        assertEquals("TRY", responses.get(0).assetName());
-        assertEquals(new BigDecimal("800.00"), responses.get(0).usableSize());
-        assertEquals("AAPL", responses.get(1).assetName());
-        verify(assetRepository).findByCustomerId(customerId);
+        assertEquals(2, responses.content().size());
+        assertEquals("TRY", responses.content().getFirst().assetName());
+        assertEquals(new BigDecimal("800.00"), responses.content().getFirst().usableSize());
+        assertEquals("AAPL", responses.content().get(1).assetName());
+        verify(assetRepository).findByCustomerId(customerId, PageableRequest.of(1, 10));
     }
 }
